<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".register_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="427dp"
        android:layout_height="730dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/koho_bold"
            android:text="@string/signup"
            android:textColor="@color/hm_orange"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/light_orange"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumberInput" />

        <EditText
            android:id="@+id/rePasswordInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/light_orange"
            android:ems="10"
            android:hint="@string/reenter_your_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/light_orange"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/registerSubmit"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/hm_orange"
            android:fontFamily="@font/koho_bold"
            android:text="@string/submit"
            android:textSize="16sp"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agreeeCheckBox" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/koho_bold"
            android:text="@string/login_here"
            android:textColor="@color/hm_orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/registerSubmit" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="94dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/koho_bold"
            android:text="@string/already_have_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerSubmit" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/light_orange"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <EditText
            android:id="@+id/addressInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/light_orange"
            android:ems="10"
            android:hint="@string/enter_your_location"
            android:inputType="text"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInput" />

        <EditText
            android:id="@+id/mobileNumberInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/light_orange"
            android:ems="10"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressInput" />

        <CheckBox
            android:id="@+id/agreeeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/koho"
            android:text="@string/i_agreed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rePasswordInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:text="@string/app_copyright"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="350dp"
        android:layout_height="97dp"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/koho_bold"
        android:text="@string/registration_note"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView49" />

    <ImageView
        android:id="@+id/imageView49"
        android:layout_width="171dp"
        android:layout_height="153dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>